--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "expect": "^29.5.0",
-    "ramda": "^0.29.0"
+    "ramda": "^0.29.0",
+    "tachyons": "^4.12.0"
   }
 }
