--- a/2_calories_counter/package.json
+++ b/2_calories_counter/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "webpack": "^5.85.1",
     "webpack-cli": "^5.1.3"
+  },
+  "dependencies": {
+    "tachyons": "^4.12.0"
   }
 }
