--- a/2_calories_counter/package.json
+++ b/2_calories_counter/package.json
@@ -4,16 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --open --mode development",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.1",
+    "style-loader": "^3.3.3",
     "webpack": "^5.85.1",
-    "webpack-cli": "^5.1.3"
+    "webpack-cli": "^5.1.3",
+    "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "declarativ": "^0.1.8",
+    "ramda": "^0.29.0",
     "tachyons": "^4.12.0"
   }
 }
