--- a/1_counter/package.json
+++ b/1_counter/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "js_fp",
+  "name": "1_counter",
   "version": "1.0.0",
   "description": "",
-  "main": "fp7.js",
+  "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open"
+    "start": "webpack serve --open --mode development",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "expect": "^29.5.0",
-    "ramda": "^0.29.0",
-    "tachyons": "^4.12.0"
-  },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.1",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.85.1",
+    "webpack-cli": "^5.1.3",
+    "webpack-dev-server": "^4.15.0"
+  },
+  "dependencies": {
+    "@types/ramda": "^0.29.2",
+    "declarativ": "^0.1.8",
     "hyperscript": "^2.0.2",
     "hyperscript-helpers": "^3.0.3",
-    "virtual-dom": "^2.1.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.4"
+    "ramda": "^0.29.0",
+    "tachyons": "^4.12.0"
   }
 }
