--- a/1_counter/package.json
+++ b/1_counter/package.json
@@ -25,6 +25,7 @@
     "hyperscript": "^2.0.2",
     "hyperscript-helpers": "^3.0.3",
     "ramda": "^0.29.0",
-    "tachyons": "^4.12.0"
+    "tachyons": "^4.12.0",
+    "virtual-dom": "^2.1.1"
   }
 }
