--- a/2_calories_counter/package.json
+++ b/2_calories_counter/package.json
@@ -20,9 +20,12 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "@types/ramda": "^0.29.2",
     "declarativ": "^0.1.8",
-    "rambda": "^7.5.0",
+    "hyperscript": "^2.0.2",
+    "hyperscript-helpers": "^3.0.3",
     "ramda": "^0.29.0",
-    "tachyons": "^4.12.0"
+    "tachyons": "^4.12.0",
+    "virtual-dom": "^2.1.1"
   }
 }
